minor refactories