@@ -1,160 +1,129 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
-	<artifactId>salsa-engine</artifactId>
-	<version>1.0</version>
-	<packaging>war</packaging>
+    <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
+    <artifactId>salsa-engine</artifactId>
+    <version>1.0</version>
+    <packaging>war</packaging>
 
-	<name>salsa-engine</name>
-	<url>http://maven.apache.org</url>
+    <name>salsa-engine</name>
+    <url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
-		<cxf.version>3.0.0-milestone1</cxf.version>
-		<spring.version>4.0.2.RELEASE</spring.version>
-		<slf4j.version>1.7.5</slf4j.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.7</java.version>
+        <cxf.version>3.0.3</cxf.version>
+        <spring.version>4.0.4.RELEASE</spring.version>
+        <slf4j.version>1.7.5</slf4j.version>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>commons-configuration</groupId> -->
-<!-- 			<artifactId>commons-configuration</artifactId> -->
-<!-- 			<version>1.9</version> -->
-<!-- 		</dependency> -->
-		
-		<!-- Apache CXF dependencies -->
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
-			<version>${cxf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http</artifactId>
-			<version>${cxf.version}</version>
-		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.cxf</groupId> -->
-<!-- 			<artifactId>cxf-rt-transports-http-jetty</artifactId> -->
-<!-- 			<version>${cxf.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.cxf</groupId> -->
-<!-- 			<artifactId>cxf-rt-rs-client</artifactId> -->
-<!-- 			<version>${cxf.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.cxf</groupId> -->
-<!-- 			<artifactId>cxf-rt-transports-http-hc</artifactId> -->
-<!-- 			<version>${cxf.version}</version> -->
-<!-- 		</dependency> -->
-
-
- <!--Spring Framework dependencies--> 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
 		
+        <!-- Apache CXF dependencies -->
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-transports-http</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+
+        <!--Spring Framework dependencies--> 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+	                              	
         <!-- Swagger API documentation -->
-<!--         <dependency> -->
-<!--             <groupId>com.wordnik</groupId> -->
-<!--             <artifactId>swagger-jaxrs_2.10</artifactId> -->
-<!--             <version>1.3.1</version> -->
-<!--         </dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>com.wordnik</groupId> -->
-<!--             <artifactId>swagger-core_2.10</artifactId> -->
-<!--             <version>1.3.1</version> -->
-<!--         </dependency> -->
+        <!--         <dependency> -->
+        <!--             <groupId>com.wordnik</groupId> -->
+        <!--             <artifactId>swagger-jaxrs_2.10</artifactId> -->
+        <!--             <version>1.3.1</version> -->
+        <!--         </dependency> -->
+        <!--         <dependency> -->
+        <!--             <groupId>com.wordnik</groupId> -->
+        <!--             <artifactId>swagger-core_2.10</artifactId> -->
+        <!--             <version>1.3.1</version> -->
+        <!--         </dependency> -->
+
+
+                
+
+        <dependency>
+            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
+            <artifactId>salsa-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		
+        <dependency>
+            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
+            <artifactId>salsa-cloud-connector</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		
+
 
 		
-		
-		<!-- SALSA dependencies -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>at.ac.tuwien.dsg.cloud.salsa</groupId> -->
-<!-- 			<artifactId>salsa-knowledge</artifactId> -->
-<!-- 			<version>0.0.1-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-
-		<dependency>
-			<groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
-			<artifactId>salsa-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
-			<artifactId>salsa-cloud-connector</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.fasterxml.jackson.core</groupId> -->
-<!-- 			<artifactId>jackson-core</artifactId> -->
-<!-- 			<version>2.4.0</version> -->
-<!-- 		</dependency> -->
-
-		
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.2.4</version>
-		</dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3</version>
+        </dependency>
 				
 
-	</dependencies>
+    </dependencies>
 
-	<build>
-		<finalName>salsa-engine</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-				<version>3.2</version>
-			</plugin>
+    <build>
+        <finalName>salsa-engine</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+                <version>3.2</version>
+            </plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<configuration>
-					<url>http://128.130.172.215:8080/manager/text</url>
-					<server>TomcatServerDSG</server>
-					<path>/salsa-engine</path>
-				</configuration>
-				<version>1.1</version>
-			</plugin>
+<!--            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <configuration>
+                    <url>http://[Tomcat_IP:PORT]/manager/text</url>
+                    <server>TomcatServerDSG</server>
+                    <path>/salsa-engine</path>
+                </configuration>
+                <version>1.1</version>
+            </plugin>-->
 			            
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.2</version>
                 <executions>
                     <execution>
                         <id>tomcat-create-exec-war</id>
@@ -164,22 +133,25 @@
                         <phase>package</phase>
                         <configuration>
                             <path>/${project.build.finalName}</path>
+                            <systemProperties>
+                                <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+                            </systemProperties>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 	
-	<repositories>
-		<repository>
-			<id>maven2-repository.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>maven2-repository.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>https://maven.java.net/content/groups/public/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
 
 </project>
